Add styles to first article

--- a/01/01.html
+++ b/01/01.html
@@ -26,60 +26,89 @@
 <body>
   <nav class="mb-4 navbar navbar-expand-sm navbar-light bg-light">
     <div class="container">
-      <a class="navbar-brand" href="#">Ramadan<span id="branded">Digest</span></a>
+      <a class="navbar-brand" href="../index.html">Ramadan<span id="branded">Digest</span></a>
     </div>
   </nav>
-
-  <div class="row">
-    <div class="col-1"></div>
-    <div class="col-10">
-      <h1 class="display-3 border border-left-0 border-right-0 p-2"> The wisdom behind the legislation of fasting</h1>
-      <p> All praises and adoration are due to Allah. Peace and blessings of Allah be upon the best of mankind,
-        Muhammad, his households, his companions and the generality of the muslims.</p>
-      <p>O slaves of Allah, know- may Allah have mercy on you - that Allah has the best wisdom in all what has created
-        and legislated. He is the Al-Hakeem, the all-wise. He neither created all that he created for joke nor for
-        amusement. He created them all for an important reason. Having created his slaves, He made it clear to them the
-        straight path to His Jannah. He made His rules and legislation for them to increase their eeman (faith) and
-        perfect their worship. There is no single worship He has legislated for His slaves except that there is a golden
-        wisdom behind it. Those who know, know. Those who do not know, do not know. For us not to know this wisdom is
-        not an evidence that there is no wisdom behind the worship. Rather, it shows how ignorant or weak we are to
-        understand Allah’s wisdom. He says “.... and you are not given of knowledge except a little.” (Surat Al-Israai’,
-        verse 85).</p>
-      <p>Allah has legislated His ways of worship and manners of interpersonal relationship as a test or trial for His
-        slaves. It is a way of distinguishing those who are truly submissive to Him from those who are submissive to
-        their self-desire. Those who are pleased to follow Allah’s legislation belong to the former. Those who
-        prioritize their whims and caprices over Allah’s legislation belong to the latter. They are those who always
-        love that Allah’s legislations follow their own desire. Allah talks about them “..and if the truth were to
-        follow their desires, they will destroy the heavens and the earths with all their contents. Nay, we came to
-        them with their reminder. But, they turn away from it.” (Suratul Mu’minuun, verse 71).</p>
-      <p>In Allah’s wisdom, He diversified His worship for His slaves. Some forms of worship are related to our
-        physical body e.g. as-solaah. Some are related to spending wealth e.g. az-zakaah. Some are related to both
-        physical body and wealth spending e.g. hajj and jihaad; and so on and so forth. These varieties are there
-        for His slaves to maximize their chance of attaining His pleasure.</p>
-      <p>Now, talking about fasting, there are lots of wisdom behind its compulsion on us as Allah’s slaves. First,
-        fasting is a form of Allah’s worship through which we can come closer to Him by putting off our desires in
-        terms of food, drink, sex etc., to show that truly we are His slaves and worshippers. It is to show that we
-        love Him and in Him is our hope. We know that forfeiting our desires to please Him is sweet and pleasant to
-        our souls. So, this is one of the greatest wisdom in legislating fasting on us. </p>
-      <p>Second, it is a way to attain at At-taqwa. At-taqwa is the state of being conscious of Allah, by following
-        His commandments and avoiding His prohibitions (as emphasized in suuratul-Baqarah, verse 183). A fasting
-        person is commanded to do righteous actions and move away from sins. The prophet was reported to have said
-        “He who does not do away with lying and vulgarism, Allah does not have business with him not to have eaten
-        or drink as a fasting person.” In other words, such a fasting person only suffered from hunger for no reward
-        from Allah. So, when a fasting person is to commit a sin, he remembers that he is fasting and as such
-        refrains from committing sin. Thus, he is able to attain greater heights in At-taqwa.</p>
-      <p>Third, fasting enhances smooth mental performance. This is because whenever we eat until we are full to
-        the brim, we often inflict on ourselves the pain of forgetfulness. Moreover, our hearts are hardened and
-        blinded away from the truth. Hence, the prophet advised us to eat lightly. He said in an authentic hadith
-        that “the son of Adam does not fill a safe worse than that in his stomach. It is enough for him to eat one
-        that which will straighten is spine. If that will not be sufficient, let him fill one-third of his stomach
-        with food, another one-third with drink and the last one-third should be reserved for his breathe.</p>
+  <main>
+    < <div id="top" class="row">
+      <div class="col-1 col-md-2"></div>
+      <div class="col-10 col-md-8">
+        <div class="jumbotron">
+          <h1> The wisdom behind the legislation of fasting</h1>
+          <p class="lead">Excerpts from Majaalisu-shahri ramadhaan by Shaykh Ibn-l-'uthaymeen</p>
+          <p>Translated by Abdulquadri Alaka</p>
+          <h6>Ramadan 13, 1434 | May 18, 2019</h6>
+        </div>
+        <p> All praises and adoration are due to Allah. Peace and blessings of Allah be upon the best of mankind,
+          Muhammad, his households, his companions and the generality of the muslims.</p>
+        <p>O slaves of Allah, know- may Allah have mercy on you - that Allah has the best wisdom in all what has created
+          and legislated. He is the Al-Hakeem, the all-wise. He neither created all that he created for joke nor for
+          amusement. He created them all for an important reason. Having created his slaves, He made it clear to them
+          the
+          straight path to His Jannah. He made His rules and legislation for them to increase their eeman (faith) and
+          perfect their worship. There is no single worship He has legislated for His slaves except that there is a
+          golden
+          wisdom behind it. Those who know, know. Those who do not know, do not know. For us not to know this wisdom is
+          not an evidence that there is no wisdom behind the worship. Rather, it shows how ignorant or weak we are to
+          understand Allah’s wisdom. He says:
+          <blockquote class="blockquote text-center">
+            <p><q>.... and you are not given of knowledge except a little.</q></p>
+            <footer class="blockquote-footer"><cite title="Source Title">Surat Al-Israai', verse 85</cite></footer>
+          </blockquote>
+        </p>
+        <p>As a matter of fact, Allah has legislated His ways of worship and manners of interpersonal relationship as a
+          test or trial for His slaves. It is a way of distinguishing those who are truly submissive to Him from those
+          who
+          are submissive to their self-desire. Those who are pleased to follow Allah’s legislation belong to the former.
+          Those who
+          prioritize their whims and caprices over Allah’s legislation belong to the latter. They are those who always
+          love that Allah’s legislations follow their own desires. Allah talks about them, He says:
+          <blockquote class="blockquote text-center">
+            <p class="mb-0"><q>...and if the truth were to
+                follow their desires, they will destroy the heavens and the earths with all their contents. Nay, we came
+                to
+                them with their reminder. But, they turn away from it.” </q>
+            </p>
+            <footer class="blockquote-footer"><cite title="Source Title">Suratul Mu’minuun, verse 71</cite></footer>
+        </p>
+        </blockquote>
+        <p>In Allah’s wisdom, He diversified His worship for His slaves. Some forms of worship are related to our
+          physical body e.g. as-solaah. Some are related to spending wealth e.g. az-zakaah. Some are related to both
+          physical body and wealth spending e.g. hajj and jihaad; and so on and so forth. These varieties are there
+          for His slaves to maximize their chance of attaining His pleasure.</p>
+        <p>Now, talking about fasting, there are lots of wisdom behind its compulsion on us as Allah’s slaves. First,
+          fasting is a form of Allah’s worship through which we can come closer to Him by putting off our desires in
+          terms of food, drink, sex etc., to show that truly we are His slaves and worshippers. It is to show that we
+          love Him and in Him is our hope. We know that forfeiting our desires to please Him is sweet and pleasant to
+          our souls. So, this is one of the greatest wisdom in legislating fasting on us. </p>
+        <p>Second, it is a way to attain at At-taqwa. At-taqwa is the state of being conscious of Allah, by following
+          His commandments and avoiding His prohibitions (as emphasized in suuratul-Baqarah, verse 183). A fasting
+          person is commanded to do righteous actions and move away from sins. The prophet was reported to have said
+          “He who does not do away with lying and vulgarism, Allah does not have business with him not to have eaten
+          or drink as a fasting person.” In other words, such a fasting person only suffered from hunger for no reward
+          from Allah. So, when a fasting person is to commit a sin, he remembers that he is fasting and as such
+          refrains from committing sin. Thus, he is able to attain greater heights in At-taqwa.</p>
+        <p>Third, fasting enhances smooth mental performance. This is because whenever we eat until we are full to
+          the brim, we often inflict on ourselves the pain of forgetfulness. Moreover, our hearts are hardened and
+          blinded away from the truth. Hence, the prophet advised us to eat lightly. He said in an authentic hadith
+          that:
+          <blockquote class="blockquote text-center">
+            <p class="mb-0"><q>the son of Adam does not fill a safe worse than that in his stomach. It is enough for him
+                to eat
+                one that which will straighten is spine. If that will not be sufficient, let him fill one-third of his
+                stomach
+                with food, another one-third with drink and the last one-third should be reserved for his breathe.</q>
+            </p>
+            <footer class="blockquote-footer"><cite title="Source Title">Ahmad, volume 4, pg 132; At-Tirmidhi, Ascetism,
+                pg 2380 </cite></footer>
+          </blockquote>
+        </p>
         <p>Fourth, the wisdom behind fasting also include the fact that the rich are able to know how much Allah has
           blessed them. Leaving their foods and drinks while fasting brings them close to the situation of the poor
           until they become empathetic of the poor’s situation. Therefore, they appreciate Allah’s bounties on them.
           They are able to know that many are lacking that which they have in their possession at no cost from Allah.
         </p>
-        <p>Fifth, fasting also allows us to have control over our souls until we are able to direct it to what would
+        <p>Fifth, fasting allows us to have control over our souls until we are able to direct it to what would
           benefit us in this life and in the hereafter. Ordinarily, the soul commands what is evil if not control or
           refrained. As fasting persons, we thus become more soft-hearted, humble and truth-loving.</p>
         <p>Sixth, during fasting, the blood is not able to flow in our blood vessels at its normal flow rate as a result
@@ -94,10 +123,16 @@
           our affairs in both lives perfect. Forgive us, our parents and all the Muslims, for You are the most merciful
           of the merciful ones. O Allah, shower Your blessings upon the prophet, his households and his companions in
           general.</p>
+        <p><i class="fa fa-arrow-up" aria-hidden="true"></i> <a href="#top">Top of the page</a></p>
+      </div>
+      <div class="col-1 col-md-2"></div>
+      </div>
+  </main>
+  <footer class="text-white text-center bg-dark footer mt-auto py-3">
+    <div class="container">
+      <p id="footer">With <i class="fas fa-heart"></i> from Satisvactory Inc. <i class="fas fa-registered    "></i></p>
     </div>
-    <div class="col-1"></div>
-  </div>
-
+  </footer>
   <!-- Optional JavaScript -->
   <!-- jQuery first, then Popper.js, then Bootstrap JS -->
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
