--- a/01/01.html
+++ b/01/01.html
@@ -30,7 +30,7 @@
     </div>
   </nav>
   <main>
-    < <div id="top" class="row">
+   <div id="top" class="row">
       <div class="col-1 col-md-2"></div>
       <div class="col-10 col-md-8">
         <div class="jumbotron">
