--- a/index.html
+++ b/index.html
@@ -36,6 +36,17 @@
         <h6>Ramadan 13, 1434 | May 18, 2019</h6>
       </div>
     </div>
+    <div class="row">
+      <div class="col-2">
+        <h1 class="display-1 textColorLighter">02</h1>
+      </div>
+      <div class="col-10">
+        <h4 class="display-4"><a href="01/01.html">Some Categories of People Regarding Fasting</a></h4>
+        <p>Excerpts from Majaalisu-shahri ramadhaan by Shaykh Ibn-l-'uthaymeen</p>
+        <p>Translated by Abdulquadri Alaka</p>
+        <h6>Ramadan 19, 1434 | May 24, 2019</h6>
+      </div>
+    </div>
   </div>
 
   <!-- Optional JavaScript -->
