fix spellings and grammar bugs in the second article

--- a/02/02.html
+++ b/02/02.html
@@ -52,7 +52,7 @@
                 the guidance and the criterion (between right and wrong). So whoever of you sights (the crescent on the
                 first night of) the month (of Ramadân i.e. is present at his home), he must observe Saum (fasts) that
                 month,…</q></p>
-            <footer class="blockquote-footer"><cite title="Source Title">in Suraatul-Baqarah, verse 185</cite></footer>
+            <footer class="blockquote-footer"><cite title="Source Title">in Suuratul-Baqarah, verse 185</cite></footer>
           </blockquote>
         </p>
         <p>The prophet sallallahu alayhi wasallam also said “ whenever you see the crescent (indicating the beginning of
@@ -67,7 +67,7 @@
           <blockquote class="blockquote text-center">
             <p class="mb-0"><q>Say to those who have disbelieved, if they cease (from disbelief) their past will be
                 forgiven.</q></p>
-            <footer class="blockquote-footer"><cite title="Source Title">Suraatul-Anfaal, verse 38</cite></footer>
+            <footer class="blockquote-footer"><cite title="Source Title">Suuratul-Anfaal, verse 38</cite></footer>
         </p>
         </blockquote>
         <p>If he should accept Islam during the day (i.e. after fajr) during the month of Ramadan, he is to refrain from
@@ -79,7 +79,7 @@
           been lifted up for three (1) a sleeping person until he wakes up (2) a child until he matures (3) a mentally
           sick person until he regains his mental healthiness. (At-Tirmidhi 1423 - Al-Huduud; Ahmad vol1. Pg 158).</p>
         <p>
-          Nevertheless, it is part of the traditions of the pious predecessors as guardians and parents of children to
+          Nevertheless, it was part of the traditions of the pious predecessors as guardians and parents of children to
           command them to fast so that they can find fasting easy and customary when they mature. Today, many Muslim
           parents on the contrary, prevent their children from fasting believing that, it is a way to show mercy to
           these children. In reality, showing mercy to these children is to train them from childhood with the pristine
@@ -89,7 +89,7 @@
           they can prevent them from fasting.</p>
         <p>A male child becomes mature having experience one of three.
           <ol type="I">
-            <li>Ejaculation, as a result of wet dream or otherwise. (See Suraatun Nuur, verse 59)</li>
+            <li>Ejaculation, as a result of wet dream or otherwise. (See Suuratun Nuur, verse 59)</li>
             <li>Growing of hairs around body private parts. ‘Atiyyah Al- Quradhiyy said: “On the day of Quraydhah, we
               were
               presented to the Prophet (S.A.W) and anyone who was mature among us, whether he has experienced
