--- a/01/01.html
+++ b/01/01.html
@@ -11,7 +11,7 @@
     integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   <!-- Custom CSS -->
   <link rel="stylesheet" href="../css/app.css">
-  <link rel="stylesheet" href="01.css">
+  <link rel="stylesheet" href="../css/content.css">
 
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Stylish&display=swap" rel="stylesheet">
