--- a/index.html
+++ b/index.html
@@ -47,6 +47,16 @@
         <h6>Ramadan 19, 1434 | May 24, 2019</h6>
       </div>
     </div>
+    <div class="row">
+      <div class="col-2">
+        <h1 class="display-1 textColorLighter">03</h1>
+      </div>
+      <div class="col-10">
+        <h4 class="display-4"><a href="03/03.html">Is Zakãtul-Fitr Payable in Cash, in lieu of Staple Foods?</a></h4>
+        <p>Written by Abu-l-banãt, Ya'qoob Ibn Rosheed-Adenuga</p>
+        <h6>Ramadan 26, 1434 | May 31, 2019</h6>
+      </div>
+    </div>
   </div>
 
   <!-- Optional JavaScript -->
