adjust hijrah  date

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <h4 class="display-4"><a href="01/01.html">The wisdom behind the legislation of fasting</a></h4>
         <p>Excerpts from Majaalisu-shahri ramadhaan by Shaykh Ibn-l-'uthaymeen</p>
         <p>Translated by Abdulquadri Alaka</p>
-        <h6>Ramadan 13, 1434 | May 18, 2019</h6>
+        <h6>Ramadan 13, 1440 | May 18, 2019</h6>
       </div>
     </div>
     <div class="row">
@@ -44,7 +44,7 @@
         <h4 class="display-4"><a href="02/02.html">Some Categories of People Regarding Fasting</a></h4>
         <p>Excerpts from Majaalisu-shahri ramadhaan by Shaykh Ibn-l-'uthaymeen</p>
         <p>Translated by Abdulquadri Alaka</p>
-        <h6>Ramadan 19, 1434 | May 24, 2019</h6>
+        <h6>Ramadan 19, 1440 | May 24, 2019</h6>
       </div>
     </div>
     <div class="row">
@@ -53,8 +53,8 @@
       </div>
       <div class="col-10">
         <h4 class="display-4"><a href="03/03.html">Is Zakãtul-Fitr Payable in Cash, in lieu of Staple Foods?</a></h4>
-        <p>Written by Abu-l-banãt, Ya'qoob Ibn Rosheed-Adenuga</p>
-        <h6>Ramadan 26, 1434 | May 31, 2019</h6>
+        <p>Written by Abu-l-banaat, Ya'qoob Ibn Rosheed-Adenuga</p>
+        <h6>Ramadan 26, 1440 | May 31, 2019</h6>
       </div>
     </div>
   </div>
